<resources>
    <string name="app_name">DQ</string>
    <string name="title_activity_auth">Authenticate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="title_activity_patients">PatientsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_signout">Sign Out</string>
    <string name="search">search</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="menu_help">Help</string>
    <string name="menu_patients">All Patients</string>
    <string name="title_activity_session">Session</string>
</resources>
