<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_patients" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_terms"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Sign Out">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_signout" />
        </menu>
    </item>

</menu>
