<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.admins.dq.drawerui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.admins.dq.drawerui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.admins.dq.drawerui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.admins.dq.drawerui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_toolsi" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.admins.dq.drawerui.send.SendFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />
</navigation>